# cpp-lab-1

./: 30_words_here.txt  CMakeLists.txt  README.md  big_text.txt  generate_big_file.sh
include/: external_set.h  word_counter.h
src/: external_set.cpp  test_main.cpp  word_counter.cpp  word_counter_test.cpp
